# RollCompare

./: CMakeLists.txt  CMakeSettings.json  README.md
RollCompare/: CMakeLists.txt  RollCompare.cpp  RollCompare.h  avslink.cpp  avslink.h
scripts/: PostBuild.cs
